@@ -42,7 +42,6 @@
 
 package io.kyligence.kap.rest.service;
 
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -53,6 +52,8 @@ import org.apache.kylin.common.util.Pair;
 import org.apache.kylin.metadata.model.TableDesc;
 import org.apache.kylin.metadata.model.TableExtDesc;
 import org.apache.kylin.rest.constant.Constant;
+import org.apache.kylin.rest.util.AclEvaluate;
+import org.apache.kylin.rest.util.AclUtil;
 import org.junit.AfterClass;
 import org.junit.Assert;
 import org.junit.Before;
@@ -77,6 +78,9 @@ public class TableExtServiceTest extends NLocalFileMetadataTestCase {
     @Mock
     private TableService tableService = Mockito.spy(TableService.class);
 
+    @Mock
+    private AclEvaluate aclEvaluate = Mockito.spy(AclEvaluate.class);
+
     @InjectMocks
     private TableExtService tableExtService = Mockito.spy(new TableExtService());
 
@@ -91,6 +95,9 @@ public class TableExtServiceTest extends NLocalFileMetadataTestCase {
     public void setup() throws IOException {
         SecurityContextHolder.getContext()
                 .setAuthentication(new TestingAuthenticationToken("ADMIN", "ADMIN", Constant.ROLE_ADMIN));
+        ReflectionTestUtils.setField(aclEvaluate, "aclUtil", Mockito.spy(AclUtil.class));
+        ReflectionTestUtils.setField(tableService, "aclEvaluate", aclEvaluate);
+        ReflectionTestUtils.setField(tableExtService, "aclEvaluate", aclEvaluate);
         ReflectionTestUtils.setField(tableExtService, "tableService", tableService);
     }
 
@@ -101,24 +108,26 @@ public class TableExtServiceTest extends NLocalFileMetadataTestCase {
 
     @Test
     public void testLoadTables() throws Exception {
-        String[] tables = {"DEFAULT.TEST_KYLIN_FACT", "DEFAULT.TEST_ACCOUNT"};
+        String[] tables = { "DEFAULT.TEST_KYLIN_FACT", "DEFAULT.TEST_ACCOUNT" };
         List<Pair<TableDesc, TableExtDesc>> result = mockTablePair();
         Mockito.doReturn(result).when(tableService).extractTableMeta(tables, "default");
-        Mockito.doNothing().when(tableExtService).loadTable(result.get(0).getFirst(), result.get(0).getSecond(), "default");
-        Mockito.doNothing().when(tableExtService).loadTable(result.get(1).getFirst(), result.get(1).getSecond(), "default");
+        Mockito.doNothing().when(tableExtService).loadTable(result.get(0).getFirst(), result.get(0).getSecond(),
+                "default");
+        Mockito.doNothing().when(tableExtService).loadTable(result.get(1).getFirst(), result.get(1).getSecond(),
+                "default");
         LoadTableResponse response = tableExtService.loadTables(tables, "default");
         Assert.assertTrue(response.getLoaded().size() == 2);
     }
 
     @Test
     public void testLoadTablesByDatabase() throws Exception {
-        String[] tableIdentities = {"EDW.TEST_CAL_DT", "EDW.TEST_SELLER_TYPE_DIM", "EDW.TEST_SITES"};
-        String[] tableNames = {"TEST_CAL_DT", "TEST_SELLER_TYPE_DIM", "TEST_SITES"};
+        String[] tableIdentities = { "EDW.TEST_CAL_DT", "EDW.TEST_SELLER_TYPE_DIM", "EDW.TEST_SITES" };
+        String[] tableNames = { "TEST_CAL_DT", "TEST_SELLER_TYPE_DIM", "TEST_SITES" };
         LoadTableResponse loadTableResponse = new LoadTableResponse();
         loadTableResponse.setLoaded(Sets.newHashSet(tableIdentities));
         Mockito.doReturn(Lists.newArrayList(tableNames)).when(tableService).getSourceTableNames("default", "EDW", "");
         Mockito.doReturn(loadTableResponse).when(tableExtService).loadTables(tableIdentities, "default");
-        LoadTableResponse response = tableExtService.loadTablesByDatabase("default", new String[]{"EDW"});
+        LoadTableResponse response = tableExtService.loadTablesByDatabase("default", new String[] { "EDW" });
         Assert.assertTrue(response.getLoaded().size() == 3);
     }
 
@@ -132,7 +141,8 @@ public class TableExtServiceTest extends NLocalFileMetadataTestCase {
         tableDesc.setName("TEST_REMOVE");
         tableDesc.setDatabase("DEFAULT");
         tableDesc.setUuid(UUID.randomUUID().toString());
-        NTableMetadataManager tableMetadataManager = NTableMetadataManager.getInstance(KylinConfig.getInstanceFromEnv(), "default");
+        NTableMetadataManager tableMetadataManager = NTableMetadataManager.getInstance(KylinConfig.getInstanceFromEnv(),
+                "default");
         tableMetadataManager.saveTableExt(tableExtDesc);
         tableMetadataManager.saveSourceTable(tableDesc);
         tableExtService.removeJobIdFromTableExt("test", "default");
